// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar/Lines chart - Simple day 1`] = `
Object {
  "chart": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "2020-12-22",
        "value": 1,
      },
      Object {
        "key": "2020-12-23",
        "value": 1,
      },
      Object {
        "key": "2020-12-24",
        "value": 1,
      },
      Object {
        "key": "2020-12-25",
        "value": 1,
      },
      Object {
        "key": "2020-12-26",
        "value": 1,
      },
      Object {
        "key": "2020-12-27",
        "value": 1,
      },
      Object {
        "key": "2020-12-28",
        "value": 1,
      },
      Object {
        "key": "2020-12-29",
        "value": 1,
      },
      Object {
        "key": "2020-12-30",
        "value": 1,
      },
      Object {
        "key": "2020-12-31",
        "value": 0,
      },
      Object {
        "key": "2021-01-01",
        "value": 2,
      },
      Object {
        "key": "2021-01-02",
        "value": 1,
      },
      Object {
        "key": "2021-01-03",
        "value": 1,
      },
      Object {
        "key": "2021-01-04",
        "value": 1,
      },
      Object {
        "key": "2021-01-05",
        "value": 0,
      },
      Object {
        "key": "2021-01-06",
        "value": 0,
      },
      Object {
        "key": "2021-01-07",
        "value": 0,
      },
      Object {
        "key": "2021-01-08",
        "value": 0,
      },
      Object {
        "key": "2021-01-09",
        "value": 0,
      },
      Object {
        "key": "2021-01-10",
        "value": 0,
      },
      Object {
        "key": "2021-01-11",
        "value": 0,
      },
      Object {
        "key": "2021-01-12",
        "value": 0,
      },
      Object {
        "key": "2021-01-13",
        "value": 0,
      },
      Object {
        "key": "2021-01-14",
        "value": 0,
      },
      Object {
        "key": "2021-01-15",
        "value": 0,
      },
      Object {
        "key": "2021-01-16",
        "value": 0,
      },
      Object {
        "key": "2021-01-17",
        "value": 0,
      },
      Object {
        "key": "2021-01-18",
        "value": 0,
      },
      Object {
        "key": "2021-01-19",
        "value": 0,
      },
      Object {
        "key": "2021-01-20",
        "value": 0,
      },
      Object {
        "key": "2021-01-21",
        "value": 0,
      },
      Object {
        "key": "2021-01-22",
        "value": 0,
      },
      Object {
        "key": "2021-01-23",
        "value": 0,
      },
      Object {
        "key": "2021-01-24",
        "value": 0,
      },
      Object {
        "key": "2021-01-25",
        "value": 0,
      },
      Object {
        "key": "2021-01-26",
        "value": 0,
      },
      Object {
        "key": "2021-01-27",
        "value": 0,
      },
      Object {
        "key": "2021-01-28",
        "value": 0,
      },
      Object {
        "key": "2021-01-29",
        "value": 0,
      },
      Object {
        "key": "2021-01-30",
        "value": 0,
      },
      Object {
        "key": "2021-01-31",
        "value": 0,
      },
      Object {
        "key": "2021-02-01",
        "value": 0,
      },
      Object {
        "key": "2021-02-02",
        "value": 0,
      },
      Object {
        "key": "2021-02-03",
        "value": 0,
      },
      Object {
        "key": "2021-02-04",
        "value": 0,
      },
      Object {
        "key": "2021-02-05",
        "value": 0,
      },
      Object {
        "key": "2021-02-06",
        "value": 0,
      },
      Object {
        "key": "2021-02-07",
        "value": 0,
      },
      Object {
        "key": "2021-02-08",
        "value": 0,
      },
      Object {
        "key": "2021-02-09",
        "value": 0,
      },
      Object {
        "key": "2021-02-10",
        "value": 0,
      },
      Object {
        "key": "2021-02-11",
        "value": 0,
      },
      Object {
        "key": "2021-02-12",
        "value": 0,
      },
      Object {
        "key": "2021-02-13",
        "value": 0,
      },
      Object {
        "key": "2021-02-14",
        "value": 0,
      },
      Object {
        "key": "2021-02-15",
        "value": 0,
      },
      Object {
        "key": "2021-02-16",
        "value": 0,
      },
      Object {
        "key": "2021-02-17",
        "value": 0,
      },
      Object {
        "key": "2021-02-18",
        "value": 0,
      },
      Object {
        "key": "2021-02-19",
        "value": 0,
      },
      Object {
        "key": "2021-02-20",
        "value": 0,
      },
      Object {
        "key": "2021-02-21",
        "value": 0,
      },
      Object {
        "key": "2021-02-22",
        "value": 0,
      },
      Object {
        "key": "2021-02-23",
        "value": 0,
      },
      Object {
        "key": "2021-02-24",
        "value": 0,
      },
      Object {
        "key": "2021-02-25",
        "value": 0,
      },
      Object {
        "key": "2021-02-26",
        "value": 0,
      },
      Object {
        "key": "2021-02-27",
        "value": 0,
      },
      Object {
        "key": "2021-02-28",
        "value": 0,
      },
      Object {
        "key": "2021-03-01",
        "value": 0,
      },
      Object {
        "key": "2021-03-02",
        "value": 0,
      },
      Object {
        "key": "2021-03-03",
        "value": 0,
      },
      Object {
        "key": "2021-03-04",
        "value": 0,
      },
      Object {
        "key": "2021-03-05",
        "value": 0,
      },
      Object {
        "key": "2021-03-06",
        "value": 0,
      },
      Object {
        "key": "2021-03-07",
        "value": 0,
      },
      Object {
        "key": "2021-03-08",
        "value": 0,
      },
      Object {
        "key": "2021-03-09",
        "value": 0,
      },
      Object {
        "key": "2021-03-10",
        "value": 0,
      },
      Object {
        "key": "2021-03-11",
        "value": 0,
      },
      Object {
        "key": "2021-03-12",
        "value": 0,
      },
      Object {
        "key": "2021-03-13",
        "value": 0,
      },
      Object {
        "key": "2021-03-14",
        "value": 0,
      },
      Object {
        "key": "2021-03-15",
        "value": 0,
      },
      Object {
        "key": "2021-03-16",
        "value": 0,
      },
      Object {
        "key": "2021-03-17",
        "value": 0,
      },
      Object {
        "key": "2021-03-18",
        "value": 0,
      },
      Object {
        "key": "2021-03-19",
        "value": 0,
      },
      Object {
        "key": "2021-03-20",
        "value": 0,
      },
      Object {
        "key": "2021-03-21",
        "value": 0,
      },
      Object {
        "key": "2021-03-22",
        "value": 0,
      },
      Object {
        "key": "2021-03-23",
        "value": 0,
      },
      Object {
        "key": "2021-03-24",
        "value": 0,
      },
      Object {
        "key": "2021-03-25",
        "value": 0,
      },
      Object {
        "key": "2021-03-26",
        "value": 0,
      },
      Object {
        "key": "2021-03-27",
        "value": 0,
      },
      Object {
        "key": "2021-03-28",
        "value": 0,
      },
      Object {
        "key": "2021-03-29",
        "value": 0,
      },
      Object {
        "key": "2021-03-30",
        "value": 0,
      },
      Object {
        "key": "2021-03-31",
        "value": 0,
      },
      Object {
        "key": "2021-04-01",
        "value": 2,
      },
    ],
  },
}
`;

exports[`Bar/Lines chart - Simple month 1`] = `
Object {
  "chart": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "2020-12-01",
        "value": 9,
      },
      Object {
        "key": "2021-01-01",
        "value": 5,
      },
      Object {
        "key": "2021-02-01",
        "value": 0,
      },
      Object {
        "key": "2021-03-01",
        "value": 0,
      },
      Object {
        "key": "2021-04-01",
        "value": 2,
      },
    ],
  },
}
`;

exports[`Bar/Lines chart - Simple week 1`] = `
Object {
  "chart": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "2020-12-21",
        "value": 6,
      },
      Object {
        "key": "2020-12-28",
        "value": 7,
      },
      Object {
        "key": "2021-01-04",
        "value": 1,
      },
      Object {
        "key": "2021-01-11",
        "value": 0,
      },
      Object {
        "key": "2021-01-18",
        "value": 0,
      },
      Object {
        "key": "2021-01-25",
        "value": 0,
      },
      Object {
        "key": "2021-02-01",
        "value": 0,
      },
      Object {
        "key": "2021-02-08",
        "value": 0,
      },
      Object {
        "key": "2021-02-15",
        "value": 0,
      },
      Object {
        "key": "2021-02-22",
        "value": 0,
      },
      Object {
        "key": "2021-03-01",
        "value": 0,
      },
      Object {
        "key": "2021-03-08",
        "value": 0,
      },
      Object {
        "key": "2021-03-15",
        "value": 0,
      },
      Object {
        "key": "2021-03-22",
        "value": 0,
      },
      Object {
        "key": "2021-03-29",
        "value": 2,
      },
    ],
  },
}
`;

exports[`Bar/Lines chart - Simple year 1`] = `
Object {
  "chart": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "2020-01-01",
        "value": 9,
      },
      Object {
        "key": "2021-01-01",
        "value": 7,
      },
    ],
  },
}
`;
